Detach from history
* Remove notebooks to convert for nsxlib to flexlib.py.
* Merge flexlibextra.py in flexlib.py. From now changes will be done in
flexlib.py directly without being able to regenerate from nsxlib
* Sort cells in flexlib.

--- a/cells/flexlib/export.ipynb
+++ b/cells/flexlib/export.ipynb
@@ -17,7 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml, cPickle, textwrap\n",
     "import CRL, helpers\n",
     "from Hurricane import DataBase, DbU, UpdateSession, Contact, Horizontal, Vertical, Net, Box, NetExternalComponents\n",
     "    \n",
@@ -41,8 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flexlib import flexlib\n",
-    "from flexlibextra import flexlibextra"
+    "from flexlib import flexlib"
    ]
   },
   {
@@ -76,7 +74,6 @@
     "\n",
     "print(\"Creating Hurricane Library\")\n",
     "_lib = {cell.name: cell for cell in flexlib}\n",
-    "_lib.update({cell.name: cell for cell in flexlibextra})\n",
     "cellnames = _lib.keys()\n",
     "cellnames.sort()\n",
     "\n",
